<resources>
    <string name="app_name">Rebook</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">Sign in</string>

    <string name="appTitle">Book The Books !</string>
    <string name="Email_hint">Email...</string>
    <string name="Email_pwd">Password</string>
    <string name="loginButton">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="google_login_here">Googleshwar</string>
    <string name="app_logo_image_register_activity">app logo image register activity</string>
    <string name="already_register">Already a Rebooker</string>
    <string name="enter_registerd_email_address">Enter registerd email address</string>
    <string name="forgot_password_no_worries">Forgot password No worries</string>

    <string-array name="genderchoose">
        <item>Male</item>
        <item>Female</item>
        <item>Transgender</item>
    </string-array>

    <string-array name="relationship">
        <item>Married</item>
        <item>Unmarried</item>
        <item>separated</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>


</resources>
